css/detail.css
nav {
    margin-top: 15px;
}

.rounded-circle {
    width: 50px;
    border: 3px solid #000;
    filter: grayscale(100%);
    overflow: hidden;
}

.navbar-nav {
   padding-right: 70px;
}

.share-icon i {
    color: #000;
    font-size: 26px;
}

.div-blog {
    max-width: 780px;
    font-size: 20px;
    margin-bottom: 35px;
}
.div-blog > p {
    font-family: 'Lusitana', serif;
    line-height: 30px;
    margin: 18px 0 18px 0;
}
.header > p {
    font-family: 'Source Serif Pro', serif;
    line-height: 50px;
    color: #000000;
    margin: 10px 0 0 0;
}

.header > img {
    margin: 15px 0 15px 0;
}

@media only screen and (max-width: 768px) {
    .header > p {font-size: 34px !important}
}

@media only screen and (min-width: 769px) {
    .header > p {font-size: 56px !important}
}

.read-next-section-overlay {
    max-width: 800px;
    margin: auto;
}

.read-next-section-overlay > span {
    font-weight: bold;
    text-transform: uppercase;
    border-bottom: 3px solid #000;
}

.read-next-section > .read-next-card > p {
    font-family: serif !important;
    font-weight: bold;
    font-size: 16px;
}

@media only screen and (max-width: 480px) {
    .read-next-card {
        width: 100% !important;
        padding: 15px;
    }
    #second-thought-card {
        display: inline !important;
    }
}

@media only screen and (min-width: 481px) {
    .read-next-card {
        float: left;
        width: 50%;
        padding: 15px;
    }
    #second-thought-card {
        display: none;
    }
}

@media only screen and (max-width: 680px) {
    .read-next-card {
        float: left;
        width: 50%;
        padding: 15px;
    }
    #second-thought-card {
        display: none;
    }
}

@media only screen and (min-width: 681px) {
    .read-next-card {
        float: left;
        width: 33.33%;
        padding: 15px;
    }
    #second-thought-card {
        display: block;
    }
}

.read-next-section-overlay > span {
    margin-top: 0px;
}

.read-next-card > a > img {
    width: 100%;
    height: 158px;
    margin: 0 0 10px;
}

.read-next-card > a {
    text-decoration: none;
    color: #000;
}

.read-next-card > a:hover {
    text-decoration: none;
    color: #000;
}

.read-next-card > a > p {
   font-size: 18px;
   font-family: sans-serif;
}

#thought-article {
    color: #404040;
    font-size: 14px;
    font-family: 'Helvetica', 'Arial', sans-serif;
    font-weight: 100;
}

.footer {
    width: 100%;
    border-top: 1px solid #e2e2e2;
    padding: 50px 5px 0px 5px;
    margin-bottom: 50px;
}

@media (max-width: 575px) {
    .footer {
        padding: 35px 5px 0px 5px;
        margin-bottom: 35px;
    }
}

.footer .row {
    margin: 0 !important;
}

.footer .col-sm-3 {
    margin-bottom: 25px;
}

.footer .row p {
    font-size: 18px;
    font-weight: bolder;
    margin-bottom: 0px;
}

@media (min-width: 768px) {
    .footer .row .col-sm-3 {
        width: 25%;
    }
}

.footer .row span {
    font-size: 16px;
}

.footer-social-icons a {
    font-size: 13px;
    color: #000;
}

.footer-social-icons a:nth-child(2) {
    margin-left: 10px;
}

